syntax = "proto3";
package stbp.v1.messages;

// request message
message Heartbeat
{
}

// response message
message HeartbeatAcknowledgement
{

}

